# modelmeta

./: .gitignore  .travis.yml  MANIFEST.in  Makefile  NEWS.md  NEWS.rst  Pipfile  README.md  README.rst  alembic.ini  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  test_requirements.txt  tox.ini
.github/workflows/: code-format-check.yml  pypi-publish.yml  python-ci.yml
alembic/: README.rst  env.py
alembic/versions/: 12f290b63791_handle_variant_sampling_geometries.py  614911daf883_add_seasonal_to_time_resolution_enum.py  7847aa3c1b39_initial_create.py  c0810e121564_add_streamflow_order_and_results_tables.py
db/: index_netcdf.r  modelmeta-detail.dia  modelmeta-v2-detail.dia  ncwms_configurator.py  schema.sql
jenkins/: Dockerfile  Jenkinsfile
mm_cataloguer/: associate_ensemble.py  generate_manifest.py  index_netcdf.py  list.py  list_csv.py  psycopg2_adapters.py
mm_cataloguer/tests/: conftest.py  test_associate_ensemble.py  test_index.py
mm_cataloguer/tests/helpers/: mock_helper.py
modelmeta/: __init__.py  util.py  v1.py  v2.py
modelmeta/data/: bad_tiny_gcm.nc  mddb-v2.sqlite  mddb.sqlite  tiny_climo_gcm.nc  tiny_downscaled.nc  tiny_gridded_obs.nc  tiny_streamflow.nc
ncwms_configurator/: README.md  __init__.py  ncwms_configurator.py  requirements.txt
scripts/: associate_ensemble  associate_ensemble.py  copyproddb.py  demo.ipynb  demo.py  demo_v2.ipynb  demo_v2.py  generate_manifest  generate_manifest.py  index_netcdf  index_netcdf.py  list  list-csv  list-csv.py  list-files.py  list.py  list_csv.py  mkblankdb.py  mktestdb.py  nc-copy-modify.py  ncwms_configurator  ncwms_configurator.py
tests/: conftest.py  test_helpers.py  test_mm.py
tests/alembic-migrations/: conftest.py  test_migrations.py
tests/helpers/: mock_helper.py
tests/mm_cataloguer/: test_associate_ensemble.py  test_index.py
tests/modelmeta/: test_against_test_sqlite_db.py  test_orm.py
tests/ncwms_configurator/: nodata.xml  test_ncwms_configurator.py
